# 19.20_Firmware_vscode

./: CMakeLists.txt  ModbusRtu.h  README.adoc  bme280_spi.c  hello_uart.c  libraries.rar
